# pimp-my-axi-vip

./: pyproject.toml  setup.py
.github/workflows/: python-app.yml
pimp_my_axi_vip/: Patcher.py  pimp_my_axi_vip.py
pimp_my_axi_vip/patches/: 0000-axi_vip_pkg.patch
tests/: test_Patcher.py  test_pimp_my_axi_vip.py
tests/resources/: add.patch  add.txt  example2.patch  example2.sv  example2.sv.orig  example_pkg.patch  example_pkg.sv  example_pkg.sv.orig  gen_patches.sh  modify.patch  modify.txt  modify.txt.orig  remove.patch  remove.txt
