[project]
name = "pimp_my_axi_vip"
version = "0.1"
description = "Make AXI VIP in Xilinx Vivado better"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
  {email = "jan.marjanovic@outlook.com"},
  {name = "Jan Marjanovic"}
]
dependencies = [
  "pytest >= 7"
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
